# ponto-esa-v5

./: .dockerignore  .gitignore  .pylanceignore  00_LEIA_PRIMEIRO.txt  AGENDAMENTO_01_DEZEMBRO_2025.md  ANALISE_COMPLETA_O_QUE_FAZ_E_FALTA.md  ANALISE_CRITICA_CODEBASE.md  ANALISE_MINUCIOSA_DUPLICACOES.md  ANALISE_VISUAL_REFATORACAO.md  AUDITORIA_CODIGO_COMPLETA.md  BUG_CRITICO_CORRIGIDO.md  CHECKLIST_FINAL.md  CHECKLIST_VERIFICACAO.md  COMECE_AQUI_REFATORACAO.txt  CONCLUSAO_JORNADA_HORA_EXTRA.md  CONFIRMACAO_AGENDAMENTO.txt  CORRECAO_ADAPT_SQL.md  CORRECAO_AUTOINCREMENT.md  CORRECOES_RENDER_ERRORS.md  CORRECOES_RENDER_ERRORS_V2.md  CORREÇÕES_TOLERANCIA_IMPLEMENTADAS.md  CREDENCIAIS_SISTEMA.md  DEPLOYMENT_TIMER.md  DEPLOY_PRODUCAO_v5.0.txt  Dockerfile  ENTREGA_COMPLETA_REFATORACAO.md  ENTREGA_VERIFICACAO_v5.0.md  ERROS_PENDENTES.md  ESPECIFICACAO_DETALHADA_COMPLETA.md  ESPECIFICACAO_FUNCIONARIO.md  ESPECIFICACAO_GESTOR.md  ESPECIFICACAO_GESTOR_DETALHADA.md  EXEMPLOS_REFATORACAO_COPY_PASTE.md  FASE1_COMPLETA.md  FASE2_STATUS.md  FEATURES_OPCIONAIS_DETALHADAS.md  FORCE_DEPLOY.txt  GUIA_CORRECAO_MIGRATION.md  GUIA_DE_ARQUIVOS.md  GUIA_EXECUCAO_REFATORACAO.md  (+116 more)
ponto_esa_v5/: .env.example  .gitattributes  .gitignore  ATUALIZAR_DEPLOY.md  CORREÇÕES_IMPLEMENTADAS.md  DEPLOY_RENDER.md  README_DEMO.md  RELATORIO_CORRECAO_COMPLEMENTAR.md  __init__.py  ajuste_registros_system.py  app_logger.py  app_v5_final.py  app_v5_final.py.bak  apply_jornada_semanal_migration.py  apply_uploads_migration.py  atestado_horas_system.py  background_scheduler.py  backup_postgresql.py  backup_system.py  (+60 more)
(+96 files in other folders)
