[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ponto-esa-v5"
version = "5.0.0"
description = "Sistema de Controle de Ponto ExSA v5.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.50.0",
    "pytz==2025.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "openpyxl==3.1.5",
]
